atualização das img

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="content">
             <div class="img-banner"></div>
             <div class="title">
-                <h3>best coffee in the region</h3>
+                <h3>best <span>coffee</span> in the region</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias recusandae adipisci necessitatibus
                     laborum sed enim ad molestiae officiis architecto magni! Vero officia veniam esse doloremque </p>
             </div>
@@ -69,7 +69,7 @@
         <h3 class="title-about">about <span>us</span></h3>
         <div class="container-about">
             <div class="container-image">
-                <img src="images/about-coffee.jpg" alt="about">
+                <img src="images/about-img.jpg" alt="about">
             </div>
             <div class="content-p">
                 <h3>What makes our <span>coffee</span> special !</h3>
